--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,5 +49,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: /tmp/kubeasy-artifact.tar.gz
-          asset_name: kubeasy-${{ github.ref_name }}.tar.gz
+          asset_name: kubeasy-artifact-${{ github.ref_name }}.tar.gz
           asset_content_type: application/gzip
